ask-a-source/K8s/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: jarvis-bot-service
  labels:
    app: jarvis-bot
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 34579
    protocol: TCP
    name: http
  selector:
    app: jarvis-bot

 
	
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: jarvis-bot-engine
  labels:
    app: jarvis-bot
spec:
  selector:
    matchLabels:
        app: jarvis-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: jarvis-bot
    spec:
      containers:
      - name: jarvis-bot-engine
        image: msr-aws-d.abbvienet.com/cwcm-admp-dev/admp-jarvis:jarvis-bck_V0.3
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
