ask-a-source/K8s/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: jarvis-bot-ui-service
  labels:
    app: jarvis-ui-bot
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 34580
    protocol: TCP
    name: http
  selector:
    app: jarvis-ui-bot
    
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: jarvis-ui-bot-engine
  labels:
    app: jarvis-ui-bot
spec:
  selector:
    matchLabels:
        app: jarvis-ui-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: jarvis-ui-bot
    spec:
      containers:
      - name: jarvis-ui-bot-engine
        image: msr-aws-d.abbvienet.com/cwcm-admp-dev/admp-jarvis:jarvis-fnt_V0.1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
